--- a/passengerCounterApp/index.css
+++ b/passengerCounterApp/index.css
@@ -4,13 +4,14 @@ body {
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
     text-align: center;
-
     display: flex;
     align-items: center;
+    justify-content: center;
     height: 100vh;
+    width: 100vw;
     margin: 0;
+    padding: 0;
     flex-direction: column; /* To stack the elements vertically */
-    padding: 20px;
     box-sizing: border-box;
 }
 
