--- a/basketballScoreboard/style.css
+++ b/basketballScoreboard/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'CustomFont'; 
+    src: url('assets/cursed-timer-font/CursedTimerUlil-Aznm.ttf'); 
+  }
+
 body {
     background-color: rgba(27, 36, 74, 1);
     text-align: center;
@@ -37,7 +42,7 @@ h2 {
 }
 
 p {
-    font-family: 'LED Digital 7', sans-serif;
+    font-family: 'CustomFont', sans-serif;
     color: rgba(249, 79, 109, 1);
     font-size: 80px;
     margin: 30px 20px;
@@ -52,7 +57,7 @@ p {
 button {
     padding: 15px;
     font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'CustomFont', sans-serif;
     background-color: rgba(27, 36, 74, 1);
     color: rgba(154, 171, 216, 1);
     border: 2px solid rgba(154, 171, 216, 1);
