--- a/basketballScoreboard/style.css
+++ b/basketballScoreboard/style.css
@@ -85,15 +85,44 @@ button:hover {
     background-color: rgba(38, 50, 72, 1);
 }
 
+.footer-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px; /* Adjust the value to control the space between the boxes */
+    width: 80%;
+    max-width: 800px; /* Adjusts the space between the GitHub logo and the credits text */
+}
+
 #credits {
     font-family: Arial, Helvetica, sans-serif;
     color: rgba(238, 238, 238, 1);
     font-size: 15px;
-    margin-top: auto; /* Pushes the element to the bottom */
+    padding: 10px;
+    margin-top: 0px;
+    margin-bottom: 40px;
+
+
+}
+
+#github-link img {
+    width: 24px; 
+    
+}
+
+
+/*#credits {
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgba(238, 238, 238, 1);
+    font-size: 15px;
+    margin-top: auto; 
     margin-bottom: 45px;
     padding: 10px;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-}
+    background-color: rgba(0, 0, 0, 0.5); 
+}*/
+
+
 
 #scorer {
     font-family: Arial, Helvetica, sans-serif;
