--- a/passwordGenerator/styles.css
+++ b/passwordGenerator/styles.css
@@ -6,7 +6,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
 
 }
 
@@ -14,6 +13,13 @@ body * + *:not(h1 + h1) {
     margin-top: 20px; 
 }
 
+html, body {
+    height: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .karla-font {
     font-family: "Karla", sans-serif;
@@ -37,7 +43,6 @@ h1 {
     padding: 20px;
     border-radius: 10px;
     width: 400px;
-    text-align: center;
 }
 
 .container {
@@ -73,6 +78,7 @@ button {
 }
 
 .password-container {
+    text-align: center;
     display: flex;
     justify-content: center; 
     gap: 20px; 
@@ -81,4 +87,24 @@ button {
 
 hr.line {
     border:0.5px solid rgba(39, 53, 73, 1);
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: auto;
+    margin-top: 150px;
+    font-size: 14px;
+    
+}
+
+.all {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center; 
 }
