--- a/rockPaperScissor/styles.css
+++ b/rockPaperScissor/styles.css
@@ -33,6 +33,14 @@ h1 {
     flex-direction: column;
 
 }
+.footer {
+    position: fixed;
+    bottom: 25px;
+    width: 100%;
+    color: rgb(0, 0, 0);
+    padding: 10px 0;
+    text-align: center;
+}
 #stage {
     width: 100%;
     height: 60px;
