--- a/rockPaperScissor/styles.css
+++ b/rockPaperScissor/styles.css
@@ -41,6 +41,7 @@ h1 {
     padding: 10px 0;
     text-align: center;
 }
+
 #stage {
     width: 100%;
     height: 60px;
@@ -59,4 +60,10 @@ button {
     color: white;
     font-family: inherit;
     font-size: 20px
+}
+
+button:hover {
+    background:  rgba(199, 200, 201, 0.356);
+    border: 1px solid #000000;
+    color: black;
 }
