--- a/saveURL/styles.css
+++ b/saveURL/styles.css
@@ -5,9 +5,7 @@ body {
 }
 
 input {
-    padding: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 5px 10px;
     width: 100%;
     box-sizing: border-box;
     border: 1px solid #5f9341;
@@ -15,13 +13,11 @@ input {
 }
 
 button {
-    padding: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 10px 15px;
     margin-top: 5px;
     font-weight: bold;
     color: white;
     background-color: #5f9341;
-    border: 1px solid #5f9341;
+    border: none;
     cursor: pointer;
 }
