--- a/saveURL/styles.css
+++ b/saveURL/styles.css
@@ -21,3 +21,17 @@ button {
     border: none;
     cursor: pointer;
 }
+
+ul {
+    margin-top: 20px;
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    margin: 5px;
+}
+
+a {
+    color:#5f9341;
+}
