--- a/unitConverter/styles.css
+++ b/unitConverter/styles.css
@@ -62,3 +62,14 @@ h1 {
     border-radius: 10px;
     font-size: 14px;
 }
+
+
+.footer {
+    margin-top: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    max-width: 800px; 
+}
