added button styling

--- a/calculatorSolo/styles.css
+++ b/calculatorSolo/styles.css
@@ -17,4 +17,10 @@ body {
 
 button {
     cursor: pointer;
+    font-size: 25px;
+    padding: 15px;
+    border: 1px solid white;
+    border-radius: 25px;
+    width: 8%;
+    height: 10%;
 }
