--- a/calculatorSolo/styles.css
+++ b/calculatorSolo/styles.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     min-height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: Arial, sans-serif;
@@ -16,14 +17,26 @@ body {
     text-align: center;
     display: flex;
     flex-direction: column;
-    align-items: center; /* Center contents horizontally */
+    align-items: center; 
     padding: 15px;
     background-color: #333;
-    width: 260px; /* Set a fixed width for the container */
+    width: 260px; 
+}
+
+.footer {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    width: 100%; 
+    padding: 10px; 
+    color: black; 
+    box-sizing: border-box; 
+    margin-top: 80px; 
+    flex-direction: column; 
 }
 
 #history {
-    width: 100%; /* Make it fit within the container */
+    width: 100%; 
     font-size: 16px;
     padding: 5px;
     border-radius: 10px;
@@ -31,11 +44,11 @@ body {
     text-align: right;
     margin-bottom: -5px;
     background-color: #333;
-    box-sizing: border-box; /* Include padding and border in the element's total width and height */
+    box-sizing: border-box; 
 }
 
 #answer {
-    width: 100%; /* Make it fit within the container */
+    width: 100%; 
     font-size: 30px;
     padding: 10px;
     border: 1px solid;
@@ -44,13 +57,13 @@ body {
     color: white;
     text-align: right;
     margin-bottom: 10px;
-    box-sizing: border-box; /* Include padding and border in the element's total width and height */
+    box-sizing: border-box; 
 }
 
 .buttons {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 5px; /* Reduce the gap between buttons */
+    gap: 5px; 
 }
 
 button {
@@ -58,7 +71,7 @@ button {
     font-size: 20px;
     padding: 15px;
     border: 1px solid white;
-    border-radius: 25px; /* Make buttons rectangular with rounded corners */
+    border-radius: 25px;
     background-color: black;
     color: white;
     transition: background-color 0.3s;
@@ -78,5 +91,5 @@ button:hover {
 }
 
 #zero {
-    grid-column: span 2; /* Make the zero button span two columns */
+    grid-column: span 2; 
 }
