--- a/toDoList/styles.css
+++ b/toDoList/styles.css
@@ -47,6 +47,7 @@ body {
     margin: auto 20px;
 
 }
+
 #toDo {
     font-size: 48px;
     font-weight: bold;
@@ -59,6 +60,7 @@ hr {
     margin: 0 auto;
     
 }
+
 #starButton {
     background-color: rgba(255, 179, 0, 1);
     border: 1px solid rgba(255, 179, 0, 1);
@@ -74,8 +76,10 @@ hr {
 #task-input {
     background-color: rgba(238, 238, 238, 1);
     width: 90%;
+    font-size: 14px;
     padding: 18px 10px;
-    margin: 40px 0;
+    margin-top: 40px;
+    margin-bottom: 10px;
     border: 1px solid black;
     border-radius: 18px;
     text-align: center;
@@ -88,6 +92,7 @@ hr {
     gap: 5px;
     justify-content: right;
     margin-right: 22px;
+    margin-bottom: 25px;
 }
 
 #add-button {
@@ -128,3 +133,13 @@ li {
     margin-top: 30px;
     margin-bottom: 10px;
 }
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    font-size: 13px;
+}
+
